--- a/conf/dvbv5_channels_isdbs.conf
+++ b/conf/dvbv5_channels_isdbs.conf
@@ -70,6 +70,10 @@
 	DELIVERY_SYSTEM = ISDBS
 	FREQUENCY = 1241280
 	STREAM_ID = 18098
+[BS11_3]
+	DELIVERY_SYSTEM = ISDBS
+	FREQUENCY = 1241280
+	STREAM_ID = 18099
 [BS13_0]
 	DELIVERY_SYSTEM = ISDBS
 	FREQUENCY = 1279640
